2005-03-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion.c (xnfusion_mount): Do not wreck the current
	fusion interface id. in case somebody tries to mount it twice.

	* nucleus/shadow.c (xnshadow_unmap): Check task pointer value
	earlier.

	* nucleus/thread.c (xnthread_init): Init the TCB so that its
	fields are set to known invalid values.

	* testsuite/klatency/latency-module.c (__latency_init): Rename the
	sampling thread to "ksampling" so that we can start both kernel
	and user-space latency tests concurrently.

2005-03-01  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10-i386-r9c5.
	
2005-02-24 Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* skin/rtai: Make C++ friendly.

2005-02-28  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Add e500 board specific option to "Architecture
	tuning flags", integrate these these flags in RTAI_USER_CFLAGS.

2005-02-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/calibration.h (__sched_latency): Reduce
	the calibrated jitter by a half for most configs.

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r6c14.

	* configure.in: Add back -fstrict-aliasing, but prevent warnings
	caused by Linux headers using -Wno-strict-aliasing.

	* arch/ppc/hal/hal.c (faults_read_proc):  Add proc entry to
	display faults occurring in real-time mode.

	* testsuite/switch/switch.c (main): Add missing mlockall().

2005-02-25  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* TROUBLESHOOTING (SMI): Add a section for SMI workaround.

	* configure.in, Kconfig: Allow kernel built ouside their source 
	tree to be used. The configure and Kconfig parameter is the 
	kernel build tree root.

	Fix architecture tuning flags determination for that case.

	Remember CROSS_COMPILE value across configure invocations.

	Allow linux-dir to be passed as a relative path.

2005-02-24  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
